Add State makers for all actor wrappers

--- a/chain/actors/builtin/init/state.go.template
+++ b/chain/actors/builtin/init/state.go.template
@@ -29,6 +29,12 @@ func load{{.v}}(store adt.Store, root cid.Cid) (State, error) {
 	return &out, nil
 }
 
+func make{{.v}}(store adt.Store) (State, error) {
+	out := state{{.v}}{store: store}
+	out.State = init{{.v}}.State{}
+	return &out, nil
+}
+
 type state{{.v}} struct {
 	init{{.v}}.State
 	store adt.Store
