--- a/chain/actors/builtin/cron/state.go.template
+++ b/chain/actors/builtin/cron/state.go.template
@@ -1,12 +1,11 @@
-package account
+package cron
 
 import (
-	"github.com/filecoin-project/go-address"
 	"github.com/ipfs/go-cid"
 
 	"github.com/filecoin-project/lotus/chain/actors/adt"
 
-	account{{.v}} "github.com/filecoin-project/specs-actors{{.import}}actors/builtin/account"
+	cron{{.v}} "github.com/filecoin-project/specs-actors{{.import}}actors/builtin/cron"
 )
 
 var _ State = (*state{{.v}})(nil)
@@ -22,15 +21,11 @@ func load{{.v}}(store adt.Store, root cid.Cid) (State, error) {
 
 func make{{.v}}(store adt.Store) (State, error) {
 	out := state{{.v}}{store: store}
-	out.State = account{{.v}}.State{}
+	out.State = cron{{.v}}.State{}
 	return &out, nil
 }
 
 type state{{.v}} struct {
-	account{{.v}}.State
+	cron{{.v}}.State
 	store adt.Store
-}
-
-func (s *state{{.v}}) PubkeyAddress() (address.Address, error) {
-	return s.Address, nil
 }
