--- a/chain/actors/builtin/market/state.go.template
+++ b/chain/actors/builtin/market/state.go.template
@@ -26,6 +26,12 @@ func load{{.v}}(store adt.Store, root cid.Cid) (State, error) {
 	return &out, nil
 }
 
+func make{{.v}}(store adt.Store) (State, error) {
+	out := state{{.v}}{store: store}
+	out.State = market{{.v}}.State{}
+	return &out, nil
+}
+
 type state{{.v}} struct {
 	market{{.v}}.State
 	store adt.Store
