--- a/chain/actors/builtin/multisig/state.go.template
+++ b/chain/actors/builtin/multisig/state.go.template
@@ -31,6 +31,12 @@ func load{{.v}}(store adt.Store, root cid.Cid) (State, error) {
 	return &out, nil
 }
 
+func make{{.v}}(store adt.Store) (State, error) {
+	out := state{{.v}}{store: store}
+	out.State = msig{{.v}}.State{}
+	return &out, nil
+}
+
 type state{{.v}} struct {
 	msig{{.v}}.State
 	store adt.Store
