Add getters for the underlying state object to state wrappers

--- a/chain/actors/builtin/account/state.go.template
+++ b/chain/actors/builtin/account/state.go.template
@@ -34,3 +34,7 @@ type state{{.v}} struct {
 func (s *state{{.v}}) PubkeyAddress() (address.Address, error) {
 	return s.Address, nil
 }
+
+func (s *state{{.v}}) GetState() interface{} {
+	return &s.State
+}
