--- a/chain/actors/builtin/cron/state.go.template
+++ b/chain/actors/builtin/cron/state.go.template
@@ -29,3 +29,7 @@ type state{{.v}} struct {
 	cron{{.v}}.State
 	store adt.Store
 }
+
+func (s *state{{.v}}) GetState() interface{} {
+	return &s.State
+}
