--- a/chain/actors/builtin/account/actor.go.template
+++ b/chain/actors/builtin/account/actor.go.template
@@ -35,11 +35,11 @@ func Load(store adt.Store, act *types.Actor) (State, error) {
 	return nil, xerrors.Errorf("unknown actor code %s", act.Code)
 }
 
-func MakeState(store adt.Store, av actors.Version) (State, error) {
+func MakeState(store adt.Store, av actors.Version, addr address.Address) (State, error) {
 	switch av {
 {{range .versions}}
 	case actors.Version{{.}}:
-		return make{{.}}(store)
+		return make{{.}}(store, addr)
 {{end}}
 }
 	return nil, xerrors.Errorf("unknown actor version %d", av)
