--- a/chain/actors/builtin/account/state.go.template
+++ b/chain/actors/builtin/account/state.go.template
@@ -20,9 +20,9 @@ func load{{.v}}(store adt.Store, root cid.Cid) (State, error) {
 	return &out, nil
 }
 
-func make{{.v}}(store adt.Store) (State, error) {
+func make{{.v}}(store adt.Store, addr address.Address) (State, error) {
 	out := state{{.v}}{store: store}
-	out.State = account{{.v}}.State{}
+	out.State = account{{.v}}.State{Address:addr}
 	return &out, nil
 }
 
