--- a/chain/actors/builtin/init/state.go.template
+++ b/chain/actors/builtin/init/state.go.template
@@ -29,9 +29,23 @@ func load{{.v}}(store adt.Store, root cid.Cid) (State, error) {
 	return &out, nil
 }
 
-func make{{.v}}(store adt.Store) (State, error) {
+func make{{.v}}(store adt.Store, networkName string) (State, error) {
 	out := state{{.v}}{store: store}
-	out.State = init{{.v}}.State{}
+	{{if (le .v 2)}}
+        mr, err := adt{{.v}}.MakeEmptyMap(store).Root()
+        if err != nil {
+            return nil, err
+        }
+
+        out.State = *init{{.v}}.ConstructState(mr, networkName)
+    {{else}}
+    	s, err := init{{.v}}.ConstructState(store, networkName)
+    	if err != nil {
+    		return nil, err
+    	}
+
+    	out.State = *s
+    {{end}}
 	return &out, nil
 }
 
@@ -72,6 +86,11 @@ func (s *state{{.v}}) SetNetworkName(name string) error {
 	return nil
 }
 
+func (s *state{{.v}}) SetNextID(id abi.ActorID) error {
+	s.State.NextID = id
+	return nil
+}
+
 func (s *state{{.v}}) Remove(addrs ...address.Address) (err error) {
 	m, err := adt{{.v}}.AsMap(s.store, s.State.AddressMap{{if (ge .v 3)}}, builtin{{.v}}.DefaultHamtBitwidth{{end}})
 	if err != nil {
@@ -90,8 +109,13 @@ func (s *state{{.v}}) Remove(addrs ...address.Address) (err error) {
 	return nil
 }
 
-func (s *state{{.v}}) addressMap() (adt.Map, error) {
-	return adt{{.v}}.AsMap(s.store, s.AddressMap{{if (ge .v 3)}}, builtin{{.v}}.DefaultHamtBitwidth{{end}})
+func (s *state{{.v}}) SetAddressMap(mcid cid.Cid) error {
+	s.State.AddressMap = mcid
+	return nil
+}
+
+func (s *state{{.v}}) AddressMap() (adt.Map, error) {
+	return adt{{.v}}.AsMap(s.store, s.State.AddressMap{{if (ge .v 3)}}, builtin{{.v}}.DefaultHamtBitwidth{{end}})
 }
 
 func (s *state{{.v}}) GetState() interface{} {
