--- a/chain/actors/builtin/multisig/actor.go.template
+++ b/chain/actors/builtin/multisig/actor.go.template
@@ -40,11 +40,11 @@ func Load(store adt.Store, act *types.Actor) (State, error) {
 	return nil, xerrors.Errorf("unknown actor code %s", act.Code)
 }
 
-func MakeState(store adt.Store, av actors.Version) (State, error) {
+func MakeState(store adt.Store, av actors.Version, signers []address.Address, threshold uint64, startEpoch abi.ChainEpoch, unlockDuration abi.ChainEpoch, initialBalance abi.TokenAmount) (State, error) {
 	switch av {
 {{range .versions}}
 	case actors.Version{{.}}:
-		return make{{.}}(store)
+		return make{{.}}(store, signers, threshold, startEpoch, unlockDuration, initialBalance)
 {{end}}
 }
 	return nil, xerrors.Errorf("unknown actor version %d", av)
