--- a/chain/actors/builtin/reward/state.go.template
+++ b/chain/actors/builtin/reward/state.go.template
@@ -23,9 +23,9 @@ func load{{.v}}(store adt.Store, root cid.Cid) (State, error) {
 	return &out, nil
 }
 
-func make{{.v}}(store adt.Store) (State, error) {
+func make{{.v}}(store adt.Store, currRealizedPower abi.StoragePower) (State, error) {
 	out := state{{.v}}{store: store}
-	out.State = reward{{.v}}.State{}
+	out.State = *reward{{.v}}.ConstructState(currRealizedPower)
 	return &out, nil
 }
 
