Make everything proven

--- a/chain/actors/builtin/miner/state.go.template
+++ b/chain/actors/builtin/miner/state.go.template
@@ -376,6 +376,45 @@ func (s *state{{.v}}) decodeSectorPreCommitOnChainInfo(val *cbg.Deferred) (Secto
 	return fromV{{.v}}SectorPreCommitOnChainInfo(sp), nil
 }
 
+func (s *state{{.v}}) EraseAllUnproven() error {
+    {{if (ge .v 2)}}
+        dls, err := s.State.LoadDeadlines(s.store)
+        if err != nil {
+            return err
+        }
+
+        err = dls.ForEach(s.store, func(dindx uint64, dl *miner{{.v}}.Deadline) error {
+            ps, err := dl.PartitionsArray(s.store)
+            if err != nil {
+                return err
+            }
+
+            var part miner{{.v}}.Partition
+            err = ps.ForEach(&part, func(pindx int64) error {
+                _ = part.ActivateUnproven()
+                err = ps.Set(uint64(pindx), &part)
+                return nil
+            })
+
+            if err != nil {
+                return err
+            }
+
+            dl.Partitions, err = ps.Root()
+            if err != nil {
+                return err
+            }
+
+            return dls.UpdateDeadline(s.store, dindx, dl)
+        })
+
+        return s.State.SaveDeadlines(s.store, dls)
+    {{else}}
+        // field doesn't exist until v2
+    {{end}}
+	return nil
+}
+
 func (d *deadline{{.v}}) LoadPartition(idx uint64) (Partition, error) {
 	p, err := d.Deadline.LoadPartition(d.store, idx)
 	if err != nil {
